# pysteelmanual

./: LICENSE  README.md  pyproject.toml
pysteelmanual/: __init__.py  materials.py  sections.py  steelmember.py  units.py
pysteelmanual/definitions/: designcodes.py
pysteelmanual/steelcodes/aisc_360_22/: compression.py  flexure.py
pysteelmanual/tests/: test_compression.py  test_steelmember.py
src/pysteelmanual/: __init__.py
