[project]
name = "pysteelmanual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mlh2nd", email = "mlh2nd@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
