[project]
name = "pysteelmanual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mlh2nd" }
]
requires-python = ">=3.13"
dependencies = [
    "efficalc>=1.2.7",
    "pytest>=8.4.2",
    "steelpy>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
